[package]
name = "rust_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
numpy = "0.16.2"
image = "0.24.2"
num-format = "0.4.0"
num_cpus = "1.13.1"
rand = "0.8.5"
# ndarray = { version = "0.15.0", features = ["blas"] }
# blas-src = { version = "0.8", features = ["openblas"] }
# openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray = { version = "0.15.4", features = ["rayon"] }